--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,6 +1,21 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<nav class="navbar navbar-expand-lg bg-dark navbar-expand-lg">
+    <div class="container-fluid">
+        <a class="navbar-brand text-light" href="#">Laras</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link text-light" href="{% url 'main:logout' %}" onclick="logout_user()">Logout</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
     <h1>Shopping List Page</h1>
 
     <h5>Name:</h5>
@@ -25,6 +40,18 @@
                 <td>{{product.price}}</td>
                 <td>{{product.description}}</td>
                 <td>{{product.date_added}}</td>
+                <td>
+                    <a href="{% url 'main:edit_product' product.pk %}">
+                        <button>
+                            Edit
+                        </button>
+                    </a>
+                    <a href="{% url 'main:delete_product' product.pk %}">
+                        <button>
+                            Delete
+                        </button>
+                    </a>
+                </td>
             </tr>
         {% endfor %}
     </table>
